<resources>
    <string name="app_name">Detektor znaków drogowych</string>
    <string name="btnOption">Opcje</string>
    <string name="imgSwitch">Informacja obrazkowa i tekstowa</string>
    <string name="speechSwitch">Informacja dźwiękowa</string>
    <string name="textSwitch">Informacja tekstowa</string>
    <string name="vibSwitch">Wibracje dla znaków zakazu</string>

    <string name="btnCamera">Włącz detektor</string>
    <string name="infOpcje">Opcje</string>
    <string name="textSign">Wykryty znak</string>

    <string name="modelError">Błąd pobierania etykiet lub modelu sztucznej inteligencji.</string>
    <string name="speachError">Aby pobrać pakiet wejdź do ustawień języka, następnie Text-to-speech output -> Ustawienia Preferred engine -> Install voice data -> wybierz z listy język polski i zainstaluj.</string>
    <string name="speachErrorTitle">Brak pakietu językowego</string>
    <string name="speachErrorYES">Przejdź do ustawień</string>
    <string name="speachErrorNO">Restartuj aplikację</string>
    <string name="errorTitle">Error</string>
    <string name="errorLocalization">Lokalizacja</string>
    <string name="TTSError">Błąd mechanizmu Text-To-Speech</string>
    <string name="localizationNotGranted">Nie udzielono dostępu do lokalizacji.</string>
    <string name="localizationError">Włącz lokalizację, aby umożliwić pomiar prędkości.</string>
    <string name="countingModelError">Błąd przetwarzania modelu sztucznej inteligencji.</string>

    <string name="errorRestart">Restartuj aplikację</string>
    <string name="errorOk">Zamknij okno</string>


    <string name="gpuInfo">GPU</string>
    <string name="cpuInfo">CPU</string>

    <!-- <string name="cameraMode">Tryb ustawienia kamery</string> -->
    <string name="cameraMode1">Usuń tło</string>
    <string name="cameraMode2">Przywróć tło</string>
    <string name="info">Connecting to GPS</string>
    <string name="speedSwitch">Pomiar prędkości</string>
    <string name="speedInfo">Prędkość</string>
    <string name="mapSwitch">Widok z mapą Google</string>
    <string name="imgSign">imageSign1</string>

    <!-- Navigations/Map -->
    <string name="mapBtn">Włącz nawigację</string>


    <!-- SILENT MODE -->
    <string name="silentMode">Włącz tryb cichy</string>

    <string name="silentModeTitle">Informacja</string>
    <string name="silentModeInf">Urządzenie jest już w trybie wyciszenia</string>
    <string name="selectingOptionToast">Wybierz przynajmniej jedną z pierwszych trzech opcji</string>
    <string name="infoTitle">Informacja</string>

</resources>