...
        android:layout_height="wrap_content"
        android:button="@drawable/ic_speed"
        android:fontFamily="@font/quantico"
        android:paddingStart="10dp"
        android:text="@string/speedSwitch"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/silenceSwitch"
        app:layout_constraintEnd_toEndOf="@+id/vibSwitch"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/vibSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/silenceSwitch"
...
